fix the 404 short url case and tweak on place style on iphone

--- a/app/sass/iphonesite/_places.scss
+++ b/app/sass/iphonesite/_places.scss
@@ -21,6 +21,9 @@ body.site_places {
     }
     .place {
       background: #f0f0f0;
+      border: 1px solid #B3B3B3;
+      border-left: none;
+      border-right: none;
       .border {
         display: none;
       }
